--- a/eventit_src/.gitignore
+++ b/eventit_src/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-src/key.js
+src/apiKey.js
 public/index.html
 
 # dependencies
